[Performance] – Implement goal & review service logic